// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image handles no uri 1`] = `null`;

exports[`Image loads high-res 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Array [
      Object {
        "backgroundColor": "#EDEDED",
        "width": "100%",
      },
      undefined,
      Object {
        "aspectRatio": undefined,
      },
      Object {
        "borderRadius": 0,
      },
    ]
  }
>
  <Image
    onLayout={[Function]}
    source={
      Object {
        "testUri": "../../../packages/responsive-image/assets/t.png",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": undefined,
          "width": undefined,
        },
        Array [
          Object {
            "width": "100%",
          },
          Object {
            "resizeMode": "center",
          },
          Object {
            "borderRadius": 0,
          },
        ],
      ]
    }
  />
  <Image
    fadeDuration={0}
    resizeMethod="resize"
    source={
      Object {
        "uri": "http://foo.com/bar.png?rel_width=1&rel_height=1&offline=false&resize=1000",
      }
    }
    style={
      Array [
        Object {
          "aspectRatio": undefined,
        },
        Object {
          "borderRadius": 0,
        },
        Object {
          "width": "100%",
        },
        Object {
          "resizeMode": "cover",
        },
        Object {
          "borderRadius": 0,
        },
      ]
    }
  />
</View>
`;

exports[`Image renders 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Array [
      Object {
        "backgroundColor": "#EDEDED",
        "width": "100%",
      },
      undefined,
      Object {
        "aspectRatio": undefined,
      },
      Object {
        "borderRadius": 0,
      },
    ]
  }
>
  <Image
    onLayout={[Function]}
    source={
      Object {
        "testUri": "../../../packages/responsive-image/assets/t.png",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": undefined,
          "width": undefined,
        },
        Array [
          Object {
            "width": "100%",
          },
          Object {
            "resizeMode": "center",
          },
          Object {
            "borderRadius": 0,
          },
        ],
      ]
    }
  />
  <Image
    fadeDuration={300}
    resizeMethod="resize"
    source={
      Object {
        "uri": "http://foo.com/bar.png?rel_width=1&rel_height=1&offline=true",
      }
    }
    style={
      Array [
        Object {
          "aspectRatio": undefined,
        },
        Object {
          "borderRadius": 0,
        },
        Object {
          "width": "100%",
        },
        Object {
          "resizeMode": undefined,
        },
        Object {
          "borderRadius": 0,
        },
      ]
    }
  />
</View>
`;

exports[`Image respects resizeMode 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Array [
      Object {
        "backgroundColor": "#EDEDED",
        "width": "100%",
      },
      undefined,
      Object {
        "aspectRatio": undefined,
      },
      Object {
        "borderRadius": 0,
      },
    ]
  }
>
  <Image
    onLayout={[Function]}
    source={
      Object {
        "testUri": "../../../packages/responsive-image/assets/t.png",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": undefined,
          "width": undefined,
        },
        Array [
          Object {
            "width": "100%",
          },
          Object {
            "resizeMode": "center",
          },
          Object {
            "borderRadius": 0,
          },
        ],
      ]
    }
  />
  <Image
    fadeDuration={300}
    resizeMethod="resize"
    source={
      Object {
        "uri": "http://foo.com/bar.png?rel_width=1&rel_height=1&offline=true",
      }
    }
    style={
      Array [
        Object {
          "aspectRatio": undefined,
        },
        Object {
          "borderRadius": 0,
        },
        Object {
          "width": "100%",
        },
        Object {
          "resizeMode": undefined,
        },
        Object {
          "borderRadius": 0,
        },
      ]
    }
  />
</View>
`;
